--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -89,7 +89,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'burritos/burritos.csv')"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "df = df.dropna(subset=['overall'])\n",
         "df['Great'] = df['overall'] >= 4"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "df.loc[carnitas, 'Burrito'] = 'Carnitas'\n",
         "df.loc[~california & ~asada & ~surf & ~carnitas, 'Burrito'] = 'Other'"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "# Drop some high cardinality categoricals\n",
         "df = df.drop(columns=['Notes', 'Location', 'Reviewer', 'Address', 'URL', 'Neighborhood'])"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -165,14 +165,14 @@
         "# Drop some columns to prevent \"leakage\"\n",
         "df = df.drop(columns=['Rec', 'overall'])"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "sL-oAZcmrT_u",
-        "outputId": "b4ab1286-9df5-40d4-ce33-bb96aef4bc9d",
+        "outputId": "11b6fde7-ae5c-4d82-b199-4136dae5da4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -182,7 +182,7 @@
         "# Take a look at the data's missing values\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -266,7 +266,7 @@
         "# Convert date to datetime format\n",
         "df['Date'] = pd.to_datetime(df['Date'])"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -278,14 +278,14 @@
         "# Make the date the index\n",
         "df = df.set_index(df['Date'])"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "r2I90BLNujc8",
-        "outputId": "d452eef9-fa48-4f3f-b328-c5bc9d2a5fc8",
+        "outputId": "17994bbf-faec-4cef-c98b-0158a286ba59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
@@ -295,7 +295,7 @@
         "# Look at the head\n",
         "df.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +772,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -792,14 +792,14 @@
         "df = df[df['Synergy'].notna()]\n",
         "df = df[df['Wrap'].notna()]"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yULxDzTQxTTZ",
-        "outputId": "dfd167d2-19d0-422e-c84d-68fc2c6efb26",
+        "outputId": "39e89a1b-4700-4e32-8643-d766acee1952",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -809,7 +809,7 @@
         "# Look at the value codes for the Baseline\n",
         "df['Great'].value_counts()"
       ],
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 12
         }
       ]
     },
@@ -831,7 +831,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "V-Zq6Be7xbz9",
-        "outputId": "19654ee0-9114-4f34-99fa-c3ad5006b82d",
+        "outputId": "b934a788-8410-4913-a1bf-b987ce666663",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -841,7 +841,7 @@
         "# Make the baseline score\n",
         "print(\"Baseline cross_val score: \", 210/(210+152))"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,7 +866,7 @@
         "df['Great_Binary'] = le.fit_transform(df['Great'])\n",
         "y = df['Great_Binary']"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -881,7 +881,7 @@
         "X_train = X[cutoff]\n",
         "y_train = y[cutoff]"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -896,7 +896,7 @@
         "X_val = X[cutoff]\n",
         "y_val = y[cutoff]"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -911,14 +911,14 @@
         "X_test = X[cutoff]\n",
         "y_test = y[cutoff]"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "07g1jM3N83QS",
-        "outputId": "f44174e4-88f8-4740-c287-d61597b7072a",
+        "outputId": "f30621fe-5f16-437b-c39a-dcde7e6e60ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
@@ -932,7 +932,7 @@
         "model = LogisticRegression()\n",
         "model.fit(X_train, y_train)\n"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 18
         }
       ]
     },
@@ -960,14 +960,14 @@
       "source": [
         "logi = model.predict(X_test)"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lsAkSm-ccV7p",
-        "outputId": "ceea3445-a116-48c9-ffda-7423d0cc5c53",
+        "outputId": "aef725c4-c47c-40da-88fb-352ed5ecd645",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
@@ -977,19 +977,19 @@
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(X_test['Tortilla'], model.predict(X_test))"
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f5ccf416438>"
+              "<matplotlib.collections.PathCollection at 0x7fbe70920ef0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -1010,7 +1010,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qxYudf8U995Q",
-        "outputId": "ad6fae59-7eb4-433f-d478-60c6ef1977b5",
+        "outputId": "2addda0c-b631-454b-c280-2f191abb2403",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -1024,7 +1024,7 @@
         "score_mean = cross_val_score(model, X_val, y_val, cv=5).mean()\n",
         "print('The mean CV score is: ', score_mean)"
       ],
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1040,7 +1040,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "15dIwdbCt3TS",
-        "outputId": "70208235-140c-4112-95e2-9c01be269e9c",
+        "outputId": "9bd78521-b017-4bdf-8281-08cbbfccc058",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1051,7 +1051,7 @@
         "\n",
         "print('logistic test accuracy score: ', metrics.accuracy_score(y_test, logi))"
       ],
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1066,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "VNUcvnX9ulYx",
-        "outputId": "4aced295-a882-4416-961f-a8c28e23ef11",
+        "outputId": "1e488259-0740-4c21-f646-6031f9f7a2a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -1083,7 +1083,7 @@
         "score_mean = cross_val_score(model, X_val, y_val, cv=3).mean()\n",
         "print('The mean CV score is: ', score_mean)"
       ],
-      "execution_count": 28,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,14 +1103,14 @@
       "source": [
         "logi = model.predict(X_test)"
       ],
-      "execution_count": 26,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "tZJ_U5QfPnHW",
-        "outputId": "8e47e0de-f8f6-4f24-b410-73b45d449b0c",
+        "outputId": "f2149c1f-f2a5-4175-e28d-140ce8bd730c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1119,7 +1119,7 @@
       "source": [
         "print('logistic test accuracy score: ', metrics.accuracy_score(y_test, logi))"
       ],
-      "execution_count": 27,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1133,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bnlitwwTQLlT"
+        "id": "U4tqZ4RqQ2IQ",
+        "outputId": "8449e920-8644-493d-c698-fcb2a0495a60",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        }
+      },
+      "source": [
+        "print('logistic test accuracy score: ', model.accuracy(y_test, logi))"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-c6ca3aa09cea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'logistic test accuracy score: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'XGBClassifier' object has no attribute 'accuracy'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8j9BEmfrT2S5"
       },
       "source": [
         ""
