--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1531,17 +1531,17 @@
         "       OneHotEncoder(use_cat_names=True),\n",
         "       SimpleImputer(),\n",
         "       StandardScaler(),\n",
-        "       LogisticRegression(random_state=42)\n",
+        "       LogisticRegression(random_state=42, C =0.1)\n",
         ")"
       ],
-      "execution_count": 123,
+      "execution_count": 181,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "vZSuuxxp8phD",
-        "outputId": "a53492fb-664a-4622-8c80-7c12cf21e84c",
+        "outputId": "51918fab-0d73-409e-e96f-f9705c38c901",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
@@ -1550,7 +1550,7 @@
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 124,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,7 +1576,7 @@
               "                ('standardscaler',\n",
               "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
               "                ('logisticregression',\n",
-              "                 LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
+              "                 LogisticRegression(C=0.1, class_weight=None, dual=False,\n",
               "                                    fit_intercept=True, intercept_scaling=1,\n",
               "                                    l1_ratio=None, max_iter=100,\n",
               "                                    multi_class='auto', n_jobs=None,\n",
@@ -1589,7 +1589,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 124
+          "execution_count": 182
         }
       ]
     },
@@ -1597,7 +1597,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "bt8YHT2J3UYF",
-        "outputId": "60450820-3029-4025-b056-253e26072de7",
+        "outputId": "34bd8c70-f90c-405f-a726-dee5f475776b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1606,7 +1606,7 @@
       "source": [
         "y_val.shape"
       ],
-      "execution_count": 125,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1618,7 +1618,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 125
+          "execution_count": 183
         }
       ]
     },
@@ -1626,7 +1626,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IsYF7tBZ3Wjt",
-        "outputId": "2fbc60cd-0643-4389-c92e-0ae3b19953ec",
+        "outputId": "7c886107-2070-47e9-cc23-79d81489c1bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1635,7 +1635,7 @@
       "source": [
         "X_val.shape"
       ],
-      "execution_count": 126,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1647,7 +1647,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 126
+          "execution_count": 184
         }
       ]
     },
@@ -1659,14 +1659,14 @@
       "source": [
         "logi = model.predict(X_test)"
       ],
-      "execution_count": 127,
+      "execution_count": 185,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "15dIwdbCt3TS",
-        "outputId": "569aafaa-62fc-449e-c572-8f4a755d1fe8",
+        "outputId": "2141d4d3-937e-4ba0-e96d-45053c545e51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1678,7 +1678,7 @@
         "\n",
         "print('logistic test accuracy score: ', metrics.accuracy_score(y_test, logi))"
       ],
-      "execution_count": 128,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "stream",
@@ -1697,14 +1697,14 @@
       "source": [
         "logi = model.predict(X_val)"
       ],
-      "execution_count": 129,
+      "execution_count": 187,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "QGLmxpBjr4Xl",
-        "outputId": "9294ef68-e5d3-4f86-fbcd-94c9233ed6a2",
+        "outputId": "25dffd95-704f-401f-c6fd-95b56cbc8ffb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1714,12 +1714,12 @@
         "# Cross Validation \n",
         "print('logistic cross-validation accuracy score: ', metrics.accuracy_score(y_val, logi))"
       ],
-      "execution_count": 130,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "logistic cross-validation accuracy score:  0.8235294117647058\n"
+            "logistic cross-validation accuracy score:  0.8470588235294118\n"
           ],
           "name": "stdout"
         }
@@ -1729,7 +1729,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dZVQQNcaXCEQ",
-        "outputId": "100aef7f-723b-49a2-efa9-b190577275fa",
+        "outputId": "578ebcad-1ee9-4192-de79-02efadd52237",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -1741,13 +1741,13 @@
         "print('Validation Accuracy Score:', model.score(X_val, y_val))\n",
         "print('Test Accuracy Score:', model.score(X_test, y_test))"
       ],
-      "execution_count": 131,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Training Accuracy Score: 0.889261744966443\n",
-            "Validation Accuracy Score: 0.8235294117647058\n",
+            "Training Accuracy Score: 0.8926174496644296\n",
+            "Validation Accuracy Score: 0.8470588235294118\n",
             "Test Accuracy Score: 0.7631578947368421\n"
           ],
           "name": "stdout"
