--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,229 @@
     "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
     "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
     "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>created</th>\n",
+       "      <th>description</th>\n",
+       "      <th>display_address</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>price</th>\n",
+       "      <th>street_address</th>\n",
+       "      <th>interest_level</th>\n",
+       "      <th>...</th>\n",
+       "      <th>high_speed_internet</th>\n",
+       "      <th>balcony</th>\n",
+       "      <th>swimming_pool</th>\n",
+       "      <th>new_construction</th>\n",
+       "      <th>terrace</th>\n",
+       "      <th>exclusive</th>\n",
+       "      <th>loft</th>\n",
+       "      <th>garden_patio</th>\n",
+       "      <th>wheelchair_access</th>\n",
+       "      <th>common_outdoor_space</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-06-24 07:54:24</td>\n",
+       "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+       "      <td>Metropolitan Avenue</td>\n",
+       "      <td>40.7145</td>\n",
+       "      <td>-73.9425</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>792 Metropolitan Avenue</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-06-12 12:19:27</td>\n",
+       "      <td></td>\n",
+       "      <td>Columbus Avenue</td>\n",
+       "      <td>40.7947</td>\n",
+       "      <td>-73.9667</td>\n",
+       "      <td>5465</td>\n",
+       "      <td>808 Columbus Avenue</td>\n",
+       "      <td>low</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-04-17 03:26:41</td>\n",
+       "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+       "      <td>W 13 Street</td>\n",
+       "      <td>40.7388</td>\n",
+       "      <td>-74.0018</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>241 W 13 Street</td>\n",
+       "      <td>high</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-04-18 02:22:02</td>\n",
+       "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+       "      <td>East 49th Street</td>\n",
+       "      <td>40.7539</td>\n",
+       "      <td>-73.9677</td>\n",
+       "      <td>3275</td>\n",
+       "      <td>333 East 49th Street</td>\n",
+       "      <td>low</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2016-04-28 01:32:41</td>\n",
+       "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+       "      <td>West 143rd Street</td>\n",
+       "      <td>40.8241</td>\n",
+       "      <td>-73.9493</td>\n",
+       "      <td>3350</td>\n",
+       "      <td>500 West 143rd Street</td>\n",
+       "      <td>low</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bathrooms  bedrooms              created  \\\n",
+       "0        1.5         3  2016-06-24 07:54:24   \n",
+       "1        1.0         2  2016-06-12 12:19:27   \n",
+       "2        1.0         1  2016-04-17 03:26:41   \n",
+       "3        1.0         1  2016-04-18 02:22:02   \n",
+       "4        1.0         4  2016-04-28 01:32:41   \n",
+       "\n",
+       "                                         description      display_address  \\\n",
+       "0  A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...  Metropolitan Avenue   \n",
+       "1                                                         Columbus Avenue   \n",
+       "2  Top Top West Village location, beautiful Pre-w...          W 13 Street   \n",
+       "3  Building Amenities - Garage - Garden - fitness...     East 49th Street   \n",
+       "4  Beautifully renovated 3 bedroom flex 4 bedroom...    West 143rd Street   \n",
+       "\n",
+       "   latitude  longitude  price           street_address interest_level  ...  \\\n",
+       "0   40.7145   -73.9425   3000  792 Metropolitan Avenue         medium  ...   \n",
+       "1   40.7947   -73.9667   5465      808 Columbus Avenue            low  ...   \n",
+       "2   40.7388   -74.0018   2850          241 W 13 Street           high  ...   \n",
+       "3   40.7539   -73.9677   3275     333 East 49th Street            low  ...   \n",
+       "4   40.8241   -73.9493   3350    500 West 143rd Street            low  ...   \n",
+       "\n",
+       "   high_speed_internet  balcony  swimming_pool  new_construction  terrace  \\\n",
+       "0                    0        0              0                 0        0   \n",
+       "1                    0        0              0                 0        0   \n",
+       "2                    0        0              0                 0        0   \n",
+       "3                    0        0              0                 0        0   \n",
+       "4                    0        0              0                 0        0   \n",
+       "\n",
+       "   exclusive  loft  garden_patio  wheelchair_access  common_outdoor_space  \n",
+       "0          0     0             0                  0                     0  \n",
+       "1          0     0             0                  0                     0  \n",
+       "2          0     0             0                  0                     0  \n",
+       "3          0     0             0                  0                     0  \n",
+       "4          0     0             0                  0                     0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
@@ -121,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
